<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/root"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/white_shade"
    app:showPaths="true">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.footinit.customviewplayground.customviews.CustomView_06
        android:id="@+id/cv06_01"
        style="@style/TextStyle.Bold.Heading.Normal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/technology"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <com.footinit.customviewplayground.customviews.CustomView_06
        android:id="@+id/cv06_02"
        style="@style/TextStyle.Bold.Heading.Normal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/sports"
        app:layout_constraintEnd_toStartOf="@+id/cv06_04"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cv06_01" />

    <com.footinit.customviewplayground.customviews.CustomView_06
        android:id="@+id/cv06_03"
        style="@style/TextStyle.Bold.Heading.Normal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/space"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/cv06_04"
        app:layout_constraintTop_toBottomOf="@+id/cv06_01" />

    <com.footinit.customviewplayground.customviews.CustomView_06
        android:id="@+id/cv06_04"
        style="@style/TextStyle.Bold.Heading.Normal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/all"
        app:layout_constraintEnd_toStartOf="@+id/cv06_03"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/cv06_02"
        app:layout_constraintTop_toBottomOf="@+id/cv06_01" />

</androidx.constraintlayout.widget.ConstraintLayout>