<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <EditText
        android:id="@+id/valueTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:background="@null"
        android:enabled="false"
        android:text="0"
        android:textColor="#000000"
        android:textSize="@dimen/valueSelector_text"
        app:layout_constraintEnd_toStartOf="@+id/plusButton"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/minusButton"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpUsage" />

    <TextView
        android:id="@+id/valueLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/valueTextView"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        android:text="@string/valueSelector_label"
        android:textSize="@dimen/valueSelector_label_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/plusButton"
        app:layout_constraintStart_toEndOf="@+id/minusButton"
        app:layout_constraintTop_toBottomOf="@+id/valueTextView"
        tools:ignore="SpUsage" />

    <ImageView
        android:id="@+id/minusButton"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignEnd="@+id/valueLabel"
        android:layout_centerVertical="true"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:clickable="true"
        android:contentDescription="@string/removeItems"
        android:focusable="true"
        android:src="@drawable/valueselect_minus_state"
        app:layout_constraintBottom_toBottomOf="@+id/valueLabel"
        app:layout_constraintEnd_toStartOf="@+id/plusButton"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/valueTextView" />

    <ImageView
        android:id="@+id/plusButton"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignStart="@+id/valueLabel"
        android:layout_centerVertical="true"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:clickable="true"
        android:contentDescription="@string/plus"
        android:focusable="true"
        android:src="@drawable/valueselect_plus_state"
        app:layout_constraintBottom_toBottomOf="@+id/valueLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/minusButton"
        app:layout_constraintTop_toTopOf="@+id/valueTextView" />
</androidx.constraintlayout.widget.ConstraintLayout>